# oled-gif-studio

./: .gitignore  LICENSE  README.fr.md  README.md  pyproject.toml
.github/workflows/: python-publish.yml
oledgif/: __init__.py  cli.py  describe.py  effects.py  export.py  fonts.py  patterns.py  presets.py  push.py  render.py
oledgif/web/: __init__.py  __main__.py  server.py
oledgif/web/static/: app.js  index.html  style.css
tests/: test_oledgif.py
