[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "oledgif"
version = "0.1.0"
description = "Générateur de GIFs animés 1 bit pour écrans OLED (SteelSeries, SSD1306, ...)"
requires-python = ">=3.10"
dependencies = ["Pillow>=9.0"]

[project.scripts]
oledgif = "oledgif.cli:main"

[tool.setuptools]
packages = ["oledgif"]
